--- a/index.html
+++ b/index.html
@@ -1,1 +1,155 @@
+<!doctype html>
+<html lang="pl">
+    <head>
+        <meta charset="utf-8">
+        <title>Studio</title>
+        <style type="text/css">
+            header {
+                position:absolute;
+                width:1600px;
+                height:80px;
+                left:0px;
+                top:0px;
+                background:#FFFFFF;
+            }
+            header a {
+                text-decoration:none;
+                color:#212121;
+            }
+            span{
+                color:#2196F3;
+            }
+            .logo{
+                position:absolute;
+                width:145px;
+                height:31px;
+                left:215px;
+                top: 24px;
 
+                font-style:normal;
+                font-weight:700;
+                font-size:26px;
+                line-height:31px;
+                letter-spacing:0.03em;
+            }
+            .agency {
+                position:absolute;
+                width:53px;
+                height:16px;
+                left:453px;
+                top:32px;
+                color:#2196F3;
+            }
+            .portfolio{
+                position:absolute;
+                width:58px;
+                height:16px;
+                left:552px;
+                top:32px;
+            }
+            .contact{
+                position:absolute;
+                width:51px;
+                height:16px;
+                left:674px;
+                top:32px;
+            }
+            .agency ,.portfolio ,.contact
+            {
+            font-style:normal;
+            font-weight:500px;
+            font-size:14px;
+            line-height:16px;
+            letter-spacing:0.02em;
+            }
+           
+           .mail{
+               color:#2196F3;
+               position:absolute;
+               width:135px;
+               height:16px;
+               left:1078px;
+               top:32px;
+               font-style:normal;
+               font-weight:500px;
+               font-size:14px;
+               line-height:16px;
+               letter-spacing:0.02em;
+           }
+           .phone{
+               position:absolute;
+               width:110px;
+               height:16px;
+               left:1263px;
+               top:32px;
+               font-style:normal;
+               font-weight:500;
+               font-size:14px;
+               line-height:16px;
+               letter-spacing:0.02em;
+               color:#757575;
+           }
+        main {
+            position:absolute;
+            width:1600px;
+            height:600px;
+            left:0px;
+            top:80px;
+            background:#2F303A;
+        }
+        h1{
+            position:absolute;
+            width:696px;
+            height:120px;
+            left:452px;
+            top:280px;
+            font-style:normal;
+            font-weight:900;
+            font-size:44px;
+            line-height:60px;
+            text-align:center;
+            letter-spacing:0,06em;
+            text-transform:uppercase;
+            color:#FFFFFF;
+        }
+        button{
+            position:absolute;
+            width:200px;
+            height:50px;
+            left:700px;
+            top:430px;
+            background:#2196F3;
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+            border-radius:4px;
+            font-style:normal;
+            font-weight:700;
+            font-size:16px;
+            line-height:30px;
+            text-align:center;
+            align-items:center;
+            letter-spacing:0.06em;
+            color:#FFFFFF;
+        }
+        
+        </style>
+    </head>
+    <body>
+        <header>
+            <a class="logo" href=""><span>Web</span>Studio</a>
+            <nav>
+                <a class="agency" href="">Agencja &#128070;</a>
+                <a class="portfolio" href="">Portfolio</a>
+                <a class="contact" href="">Kontakt</a>
+            </nav>
+                <a class="mail" href="mailto:info@devstudio.com">info@devstudio.com &#128070;</a>
+                <a class="phone" href="tel:+48111111111">+48 111 111 111</a>
+            </header>
+        <main>
+<h1> EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
+<button type="button"><div class="button">Zamów usługę</div></button>
+        </main>
+        <footer>
+
+        </footer>
+    </body>
+</html>
