change 4th edition

--- a/index3.html
+++ b/index3.html
@@ -281,32 +281,32 @@
                 
             </section>
             <h2>Czym się zajmujemy</h2>
-            <img style="position:absolute; left:215px; top:1061px;" src="./images/background.jpg">
-            <img style="position:absolute; left:615px; top:1061px;" src="./images/background2.jpg">
-            <img style="position:absolute; left:1015px; top:1061px;" src="./images/tablet.jpg">
+            <img style="position:absolute; left:215px; top:1061px;" src="./images/background.jpg" alt="background">
+            <img style="position:absolute; left:615px; top:1061px;" src="./images/background2.jpg" alt="background2">
+            <img style="position:absolute; left:1015px; top:1061px;" src="./images/tablet.jpg" alt="tablet">
    
             <section class="chapter3">
                 <h3>Nasz zespół</h3>
                  <article class="pd">
-                     <img src="./images/product designer.jpg">
+                     <img src="./images/product designer.jpg" alt="productdesigner">
                     <p style="font-weight:500;">John Doe</p>
                     <p style="font-weight:400; color:#757575;">Product Designer</p>
                     </article>
 
                     <article class="pd2">
-                        <img src="./images/developer.jpg">
+                        <img src="./images/developer.jpg" alt="developer">
                        <p style="font-weight:500;">John Doe</p>
                        <p style="font-weight:400; color:#757575;">Frontend Developer</p>
                        </article>
    
                        <article class="pd3">
-                        <img src="./images/marketing.jpg">
+                        <img src="./images/marketing.jpg" alt="marketing">
                        <p style="font-weight:500;">John Doe</p>
                        <p style="font-weight:400; color:#757575;">Marketing</p>
                        </article>
    
                        <article class="pd4">
-                        <img src="./images/designer.jpg">
+                        <img src="./images/designer.jpg" alt="designer">
                        <p style="font-weight:500;">John Doe</p>
                        <p style="font-weight:400; color:#757575;">UI Designer</p>
                        </article>
@@ -320,10 +320,12 @@
             <div class="logo2">
                 <a  href="">Web<span style="color:#FFFFFF;">Studio</span></a>
                             </div>
+            <adress>
             <div class="city">m. Warszawa, Aleje Jerozolimskie 21</div>                                  
            <div style="margin-top:9px;"><a style="padding-left:215px; color:rgba(255, 255, 255, 0.6) ;" href="mailto:info@devstudio.com">info@devstudio.com </a></div>
          <div style="margin-top:9px;"> <a style="padding-left:215px;color:rgba(255, 255, 255, 0.6) " href="tel:+48111111111">+48 111 111 111</a>
           </div>
+          </adress>
         </footer>
     </body>
 </html>
