--- a/index4.html
+++ b/index4.html
@@ -159,6 +159,9 @@
                 line-height:24px;
                 letter-spacing:0.03em;
             }
+            .footer li{
+                line-height:24px;
+            }
            .footer ul{
                padding-top:60px;
                padding-left:215px;
@@ -215,12 +218,12 @@
                 <h2>Czym się zajmujemy</h2>
                 <ul>
                     <li>
-                        <img src="./background.jpg" alt="biurko z klawiatura">
+                        <img src="./images/background.jpg" alt="biurko z klawiatura">
                     </li>
                     <li>
-                        <img src="./background2.jpg" alt="ekran z telefonem">
+                        <img src="./images/background2.jpg" alt="ekran z telefonem">
                     </li>
-                    <li><img src="./tablet.jpg" alt="tablet>" </li>
+                    <li><img src="./images/tablet.jpg" alt="tablet>" </li>
                 </ul>
             </section>
             <section style="background-color:#f5f4fa; height:648px;" class="teamwork">
@@ -228,7 +231,7 @@
                 <ul>
                     <li>
                         <figure style="margin-left:180px;">
-                            <img  src="./product designer.jpg" alt="product designer">
+                            <img  src="./images/product designer.jpg" alt="product designer">
                             <figcaption class="frame">
                                 <p>John Doe</p>
                                 <p class="workclass">Product Designer</p>
@@ -236,7 +239,7 @@
                         </figure>
                         <li>
                             <figure style="margin-left:-10px;">
-                                <img src="./developer.jpg" alt="frontedn developer">
+                                <img src="./images/developer.jpg" alt="frontedn developer">
                                 <figcaption>
                                     <p>John Doe</p>
                                     <p class="workclass">Frontend Developer</p>
@@ -244,7 +247,7 @@
                             </figure>
                             <li>
                                 <figure style="margin-left:-10px;">
-                                    <img src="./marketing.jpg" alt="marketing">
+                                    <img src="./images/marketing.jpg" alt="marketing">
                                     <figcaption>
                                         <p>John Doe</p>
                                         <p class="workclass">Marketing</p>
@@ -252,7 +255,7 @@
                                 </figure>
                                 <li>
                                     <figure style="margin-left:-10px;">
-                                        <img src="./designer.jpg" alt="product designer">
+                                        <img src="./images/product designer.jpg" alt="product designer">
                                         <figcaption>
                                             <p>John Doe</p>
                                             <p class="workclass">UI Designer</p>
