--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                 <ul>
                     <li>
                         <figure style="margin-left:180px;">
-                            <img  src="./images/product designer.jpg" alt="product designer">
+                            <img  src="./images/productdesigner.jpg" alt="product designer">
                             <figcaption class="frame">
                                 <p>John Doe</p>
                                 <p class="workclass">Product Designer</p>
@@ -271,7 +271,7 @@
                 <ul>
                     <li><a href="" style="color:#2196f3; font-family:Raleway; font-style:normal; font-weight:700; font-size:26px; line-height:31px; letter-spacing:0.03em;text-decoration:none;">Web<span style="color:white;">Studio</span></a>
                     </li>
-                    <li><adress style="color:#ffffff;">m. Warszawa, Aleje Jerozolimskie 21</adress></li>
+                    <adress style="color:#ffffff;">m. Warszawa, Aleje Jerozolimskie 21</adress>
                     <li><a href="mailto:info@devstudio.com" style="color:rgba(255,255,255,0.6);">info@devstudio.com</a>
                     </li>
                     <li> <a style="color:rgba(255,255,255,0.6);" href="tel:+48111111111">+48 111 111 111</a>
