--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 margin-top:-15px;  
 
             }
-            .footer a{
+            .footer {
                 text-decoration:none;
                 font-family:roboto;
                 font-style:normal;
@@ -159,13 +159,46 @@
                 line-height:24px;
                 letter-spacing:0.03em;
             }
-            .footer li{
-                line-height:24px;
+            .footer div{
+               padding-left:215px;
+
             }
            .footer ul{
                padding-top:60px;
                padding-left:215px;
            }
+           .logodown a{
+            color:#2196f3; 
+            font-family:Raleway; 
+            font-style:normal; 
+            font-weight:700; 
+            font-size:26px; 
+            line-height:31px; 
+            letter-spacing:0.03em;
+            text-decoration:none;
+           }
+           .logodown{
+               padding-top:60px;
+           }
+           .adress{
+            color:#ffffff;
+            padding-top:20px;
+           }
+           .mailto a{
+            color:rgba(255,255,255,0.6);
+            text-decoration:none;
+           }
+           .mailto{
+            padding-top:9px;
+           }
+           .tele a{
+            color:rgba(255,255,255,0.6);
+            text-decoration:none;
+           }
+           .tele{
+               padding-top:9px;
+           }
+
             }
         </style>
     </head>
@@ -268,15 +301,12 @@
         </main>
         <footer>
             <section class="footer">
-                <ul>
-                    <li><a href="" style="color:#2196f3; font-family:Raleway; font-style:normal; font-weight:700; font-size:26px; line-height:31px; letter-spacing:0.03em;text-decoration:none;">Web<span style="color:white;">Studio</span></a>
-                    </li>
-                    <adress style="color:#ffffff;">m. Warszawa, Aleje Jerozolimskie 21</adress>
-                    <li><a href="mailto:info@devstudio.com" style="color:rgba(255,255,255,0.6);">info@devstudio.com</a>
-                    </li>
-                    <li> <a style="color:rgba(255,255,255,0.6);" href="tel:+48111111111">+48 111 111 111</a>
-                    </li>
-                </ul>
+               
+                    <div class="logodown"><a href="">Web<span style="color:white;">Studio</span></a></div>
+                    <div class="adress"><adress>m. Warszawa, Aleje Jerozolimskie 21</adress></div>
+                <div class="mailto"><a href="mailto:info@devstudio.com" >info@devstudio.com</a></div>
+                <div class="tele"> <a href="tel:+48111111111">+48 111 111 111</a><div></div>
+                                   
             </section>
         </footer>
     </body>
