--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="pl">
     <head>
-        <meta charset = "utf=8">
+        <meta charset = "utf-8">
         <title>Studio</title>
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
@@ -211,52 +211,54 @@
                 </li>
                 <li>
                     <ul style="font-family:Roboto; font-style:normal; font-weight:500;font-size:14px; line-height:16px;letter-spacing:0,02em; margin-top:32px; padding-left:93px;">
-                        <li><a href="" style="color:#2196f3;">Agencja<div style="padding-left:30px;">&#128070;</div></a></li>
-                        <li><a href="" style="padding-left:46px;">Portfolio</a> </li>
-                        <li><a href="" style="padding-left:64px;">Kontakt</a> </li>
+                        <li> <a href="" style="color:#2196f3;"> Agencja <div style="padding-left:30px;">&#128070;</div></a></li>
+                        <li> <a href="" style="padding-left:46px;"> Portfolio </a> </li>
+                        <li> <a href="" style="padding-left:64px;"> Kontakt </a> </li>
                     </ul>       
                 </li>
                 <li style="font-family:roboto; font-style:normal; font-weight:500; font-size:14px; line-height:16px; letter-spacing:0.02em; margin-top:32px; padding-left:353px;">
-                    <a href="mailto:info@devstudio.com" style="color:#2196f3;padding-right:50px;">info@devstudio.com<div style="padding-left:30px;">&#128070;</div></a>
-                    <a href="tel:+48111111111">+48 111 111 111</a>
+                    <a href="mailto:info@devstudio.com" style="color:#2196f3;padding-right:50px;"> info@devstudio.com <div style="padding-left:30px;"> &#128070; </div> </a>
+                    <a href="tel:+48111111111">+48 111 111 111 </a>
                 </li>
             </ul>
             </div>
         </header>
         <main>
             <section class="top">
-                <h1 class="naglowek">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
-                <button class="button" type="button">Zamów usługę</button>
+                <h1 class="naglowek"> EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU </h1>
+                <button class="button" type="button"> Zamów usługę </button>
 
             </section>
             <section style="margin-left:215px;">
             <ul class="lista">
                 <li class="lista2">
                     <h2>LOREM IPSUM</h2>
-                    <P>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</P>
+                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada </p>
                 </li>
                 <li class="lista2">
-                    <h2>LOREM IPSUM</h2>
-                    <P>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</P>
-                </li> <li class="lista2">
-                    <h2>LOREM IPSUM</h2>
-                    <P>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</P>
-                </li> <li class="lista2">
-                    <h2>LOREM IPSUM</h2>
-                    <P>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</P>
+                    <h2>LOREM IPSUM </h2>
+                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada </p>
+                </li> 
+                <li class="lista2">
+                    <h2> LOREM IPSUM </h2>
+                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada </p>
+                </li> 
+                <li class="lista2">
+                    <h2> LOREM IPSUM </h2>
+                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada </p>
                 </li>
             </ul>         
             </section>
             <section class="occupation">
-                <h2>Czym się zajmujemy</h2>
+                <h2> Czym się zajmujemy</h2>
                 <ul>
                     <li>
-                        <img src="./images/background.jpg" alt="biurko z klawiatura">
+                        <img src="./images/background.jpg" alt="biurko z klawiatura" >
                     </li>
                     <li>
-                        <img src="./images/background2.jpg" alt="ekran z telefonem">
+                        <img src="./images/background2.jpg" alt="ekran z telefonem" >
                     </li>
-                    <li><img src="./images/tablet.jpg" alt="tablet>" </li>
+                    <li> <img src="./images/tablet.jpg" alt="tablet" > </li>
                 </ul>
             </section>
             <section style="background-color:#f5f4fa; height:648px;" class="teamwork">
@@ -267,7 +269,7 @@
                             <img  src="./images/productdesigner.jpg" alt="product designer">
                             <figcaption class="frame">
                                 <p>John Doe</p>
-                                <p class="workclass">Product Designer</p>
+                                <p class="workclass"> Product Designer </p>
                             </figcaption>
                         </figure>
                         <li>
@@ -275,7 +277,7 @@
                                 <img src="./images/developer.jpg" alt="frontedn developer">
                                 <figcaption>
                                     <p>John Doe</p>
-                                    <p class="workclass">Frontend Developer</p>
+                                    <p class="workclass"> Frontend Developer </p>
                                 </figcaption>
                             </figure>
                             <li>
@@ -283,7 +285,7 @@
                                     <img src="./images/marketing.jpg" alt="marketing">
                                     <figcaption>
                                         <p>John Doe</p>
-                                        <p class="workclass">Marketing</p>
+                                        <p class="workclass"> Marketing</p>
                                     </figcaption>
                                 </figure>
                                 <li>
@@ -302,10 +304,10 @@
         <footer>
             <section class="footer">
                
-                    <div class="logodown"><a href="">Web<span style="color:white;">Studio</span></a></div>
-                    <div class="adress"><adress>m. Warszawa, Aleje Jerozolimskie 21</adress></div>
-                <div class="mailto"><a href="mailto:info@devstudio.com" >info@devstudio.com</a></div>
-                <div class="tele"> <a href="tel:+48111111111">+48 111 111 111</a><div></div>
+                    <div class="logodown"> <a href="">Web<span style="color:white;"> Studio </span> </a> </div>
+                    <div class="adress"> <adress>m. Warszawa, Aleje Jerozolimskie 21 </adress> </div>
+                <div class="mailto"> <a href="mailto:info@devstudio.com" > info@devstudio.com </a> </div>
+                <div class="tele"> <a href="tel:+48111111111">+48 111 111 111 </a> <div> </div>
                                    
             </section>
         </footer>
