--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     </head>
     <body>
         <header>
-            <div class="header">
             <ul>
                 <li>
                     <a href="">Web<span>Studio</span></a>
@@ -23,7 +22,6 @@
                     <a href="tel:+48111111111">+48 111 111 111 </a>
                 </li>
             </ul>
-            </div>
         </header>
         <main>
             <section>
@@ -106,8 +104,8 @@
         <footer>
                     <div> <a href="">Web<span> Studio </span> </a> </div>
                 <adress> m. Warszawa, Aleje Jerozolimskie 21 </adress>
-                <div class="mailto"> <a href="mailto:info@devstudio.com" > info@devstudio.com </a> </div>
-                <div class="tele"> <a href="tel:+48111111111"> +48 111 111 111 </a> </div>
+                <div> <a href="mailto:info@devstudio.com" > info@devstudio.com </a> </div>
+                <div> <a href="tel:+48111111111"> +48 111 111 111 </a> </div>
                                    
         </footer>
     </body>
