update index mentor

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
         <header>
             <ul>
                 <li>
-                    <a href="">Web<span>Studio</span></a>
+                    <a href=""> WebStudio </a>
                 </li>
                 <li>
                     <ul>
-                        <li> <a href=""> Agencja <div</a></li>
+                        <li> <a href=""> Agencja </a> </li>
                         <li> <a href=""> Portfolio </a> </li>
                         <li> <a href=""> Kontakt </a> </li>
                     </ul>       
