update index mentor

--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
                 <h2> Czym się zajmujemy</h2>
                 <ul>
                     <li>
-                        <img src="./images/background.jpg" alt="biurko z klawiatura" width="370px" height="296px" >
+                        <img src="./images/background.jpg" alt="biurko z klawiatura" width="370" height="296" >
                     </li>
                     <li>
-                        <img src="./images/background2.jpg" alt="ekran z telefonem" width="370px" height="296px" >
+                        <img src="./images/background2.jpg" alt="ekran z telefonem" width="370" height="296" >
                     </li>
-                    <li> <img src="./images/tablet.jpg" alt="tablet" height="296x" width="370px"> </li>
+                    <li> <img src="./images/tablet.jpg" alt="tablet" height="296" width="370"> </li>
                 </ul>
             </section>
             <section>
@@ -66,7 +66,7 @@
                 <ul>
                     <li>
                         <figure>
-                            <img  src="./images/productdesigner.jpg" alt="productdesigner" width="270px" height="260px">
+                            <img  src="./images/productdesigner.jpg" alt="productdesigner" width="270" height="260">
                             <figcaption>
                                 <p>John Doe</p>
                                 <p> Product Designer </p>
@@ -74,7 +74,7 @@
                         </figure>
                         <li>
                             <figure>
-                                <img src="./images/developer.jpg" alt="frontedndeveloper" width="270px" height="260px">
+                                <img src="./images/developer.jpg" alt="frontedndeveloper" width="270" height="260">
                                 <figcaption>
                                     <p>John Doe</p>
                                     <p> Frontend Developer </p>
@@ -82,7 +82,7 @@
                             </figure>
                             <li>
                                 <figure>
-                                    <img src="./images/marketing.jpg" alt="marketing" width="270px" height="260px">
+                                    <img src="./images/marketing.jpg" alt="marketing" width="270" height="260">
                                     <figcaption>
                                         <p>John Doe</p>
                                         <p> Marketing</p>
@@ -90,7 +90,7 @@
                                 </figure>
                                 <li>
                                     <figure>
-                                        <img  src="./images/designer.jpg" alt="designer" width="270px" height="260px">
+                                        <img  src="./images/designer.jpg" alt="designer" width="270" height="260">
                                         <figcaption>
                                             <p>John Doe</p>
                                             <p>UI Designer</p>
