update index mentor

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 
                 <a href=""> WebStudio </a>
                 
-                 <div>   
+                <nav>  
                     <ul>
                         <li> <a href=""> Agencja </a> </li>
                         <li> <a href=""> Portfolio </a> </li>
                         <li> <a href=""> Kontakt </a> </li>
                     </ul>
-                </div> 
+                </nav>
 
                <ul> 
 
@@ -28,12 +28,14 @@
                    </li>
             </ul>
         </header>
+
         <main>
             <section>
                 <h1> EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU </h1>
                 <button type="button"> Zamów usługę </button>
 
             </section>
+
             <section>
             <ul>
                 <li>
